Ajout d'une fonction de sérialisation binaire
Recherche dans la table Client et si existe sérialise la ligne pour après accéder à l'interface avec des infos.

--- a/ProjetBDD/ProjetBDD/ProjetBDD.csproj
+++ b/ProjetBDD/ProjetBDD/ProjetBDD.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>..\..\..\..\TD école\TD Base de Données et Interopérabilité\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -75,6 +78,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Client.cs" />
     <Compile Include="Connection.xaml.cs">
       <DependentUpon>Connection.xaml</DependentUpon>
     </Compile>
