ajout cooker cette fois

--- a/ProjetBDD/ProjetBDD/ProjetBDD.csproj
+++ b/ProjetBDD/ProjetBDD/ProjetBDD.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Connection.xaml.cs">
       <DependentUpon>Connection.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Cooker.cs" />
     <Compile Include="Inscription.xaml.cs">
       <DependentUpon>Inscription.xaml</DependentUpon>
     </Compile>
